--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,8 +28,8 @@ phases:
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
-      - kubectl apply -f simple_jwt_api.yml --role-arn 'UdacityFlaskDeployCBKubectlRole'
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --role-arn 'UdacityFlaskDeployCBKubectlRole'
+      - kubectl apply -f simple_jwt_api.yml 
       - printf '[{"name":"simple_jwt_api","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
       - pwd
       - ls
